fixed layout issue refactoed with mui"

--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,7 @@
 
 * {
   font-family: Roboto, sans-serif;
+  outline: none;
 }
 
 code {
